--- a/config/nginx-nextjs-with-forcessl.conf.erb
+++ b/config/nginx-nextjs-with-forcessl.conf.erb
@@ -41,7 +41,7 @@ http {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
-			proxy_pass http://localhost:3000; #next serve listens here and receives nginx requests
+			proxy_pass http://www.google.com; #next serve listens here and receives nginx requests
 		}
 	}
 }
